<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">55123</string>
    <string name="main_title">Watch You</string>
    <string name="me_lable">Me</string>
    <string name="exit_label">Exit</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
        This game just made for practice
        Android programming System.  </string>
    <string name="setting_label">Settings</string>
    <string name="setting_title">Sudoku settings</string>
    <string name="setting_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty Level</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Sudoku Game</string>
    <string name="no_moves_label">No Moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="enter_launch_codes">enter_launch_codes</string>
    <string name="launch">Done</string>
    <string name="action_settings">action_settings</string>
    <string name="title_activity_ddate_picker">DDatePickerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="sc1title">TITLE : </string>
    <string name="sc2title">TIME : </string>
    <string name="sc3title">REMIND : </string>
    <string name="sc1text">New Schedule</string>
    <string name="sc2text">Date</string>
    <string name="sc3text1">Date</string>
    <string name="sc3text2">Time</string>
    <string name="title_activity_schedule_content">ScheduleContent</string>
    <string name="title_activity_rank">Rank</string>
    <string name="title_activity_me">Me</string>

    <string-array name="photo_oprion">




	　　                                 <item>From Album</item>




	　　                                 <item>Take a Picture</item>




	　　                                 <item>Cancel</item>




　　 </string-array>

    <string name="title_activity_me_supervise_main">Me_supervise_mainnn</string>
    <string name="title_activity_me_supervise_personal">Me_supervise_personal</string>
    <string name="title_activity_hsv">HSV</string>
    <string name="title_activity_photo_page">Photo_page</string>
    <string name="title_activity_photo__test">Photo_TEST</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_submit_task">Submit_task</string>
    <string name="title_activity_create__account">Create_Account</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_rank_content">Rank_content</string>
    <string name="title_activity_record">Record</string>

</resources>