<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f0e68c">

    <TextView
        android:id="@+id/sc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sc1title"
        android:textColor="#000000"
        android:textSize="40sp" />

     <EditText
         android:id="@+id/scedit1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/sc1"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/sc1"
         android:layout_toRightOf="@+id/sc1"
         android:layout_marginLeft="50dp"
         android:background="@drawable/shape"
         android:ems="10"
         android:hint="@string/sc1text" >
         <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/scedit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sc2"
        android:layout_alignLeft="@+id/scedit1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/sc2"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/sc2text"
        android:inputType="date" />

    <EditText
        android:id="@+id/scedit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sc3"
        android:layout_alignLeft="@+id/scedit2"
        android:layout_alignTop="@+id/sc3"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/sc3text1"
        android:inputType="date" />
    
    <EditText android:id="@+id/scedittime1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/scedit3"
         android:layout_alignBottom="@+id/scedit3"
         android:layout_toRightOf="@+id/scedit3"
         android:background="@drawable/shape"
         android:ems="10"
         android:hint="@string/sc3text2"
         android:inputType="time" />
    

    
    <RelativeLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#808080"
        android:columnCount="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/scinside1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="TYPE : "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/scinside2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/scinside1"
            android:text="STAR : "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/scinside3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/scinside2"
            android:text="RING : "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="40sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="286dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@+id/scinside1"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/scinside1"
            android:layout_toRightOf="@+id/scinside2"
            android:background="@drawable/shape" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="284dp"
            android:layout_height="42dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/scinside2"
            android:layout_alignTop="@+id/scinside2"
            android:layout_alignBottom="@+id/scinside2"
            android:layout_below="@+id/spinner1"
            android:background="@drawable/shape" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="284dp"
            android:layout_height="46dp"
            android:layout_alignBottom="@+id/scinside3"
            android:layout_alignLeft="@+id/spinner2"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/scinside3"
            android:layout_below="@+id/spinner2"
            android:background="@drawable/shape" />

    </RelativeLayout>

    <TextView
        android:id="@+id/scNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GridLayout1"
        android:layout_below="@+id/GridLayout1"
        android:textColor="#000000" 
        android:textSize="40sp" 
        android:layout_marginTop="60dp"
        android:text="Note : "
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/scbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:text="OK" />

    <EditText
        android:id="@+id/MultieditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scNote"
        android:background="@drawable/shape"
        android:inputType="textMultiLine"
        android:height="100dp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/MultieditText1"
        android:layout_alignTop="@+id/scbutton"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:visibility="invisible"
        android:text="Delete" />

    <TextView
        android:id="@+id/sc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sc2"
        android:layout_below="@+id/sc2"
        android:text="@string/sc3title"
        android:textColor="#000000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/sc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sc1"
        android:layout_below="@+id/sc1"
        android:text="@string/sc2title"
        android:textColor="#000000"
        android:textSize="40sp" />

    

</RelativeLayout>